load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api_beacon.go",
        "api_config.go",
        "api_minimal_validator_api.go",
        "api_node.go",
        "api_validator_required_api.go",
        "client.go",
        "configuration.go",
        "model_attestation.go",
        "model_attester_duty.go",
        "model_attester_slashing.go",
        "model_beacon_block.go",
        "model_beacon_block_all_of.go",
        "model_beacon_block_all_of_1.go",
        "model_beacon_block_all_of_1_body.go",
        "model_beacon_block_all_of_1_body_data.go",
        "model_beacon_block_all_of_1_body_deposits.go",
        "model_beacon_block_all_of_1_body_eth1_data.go",
        "model_checkpoint.go",
        "model_committee.go",
        "model_fork.go",
        "model_genesis_time.go",
        "model_inline_object.go",
        "model_inline_object_1.go",
        "model_inline_object_2.go",
        "model_inline_object_3.go",
        "model_inline_response_200.go",
        "model_inline_response_200_1.go",
        "model_inline_response_200_10.go",
        "model_inline_response_200_10_data.go",
        "model_inline_response_200_11.go",
        "model_inline_response_200_11_data.go",
        "model_inline_response_200_11_data_1.go",
        "model_inline_response_200_12.go",
        "model_inline_response_200_12_attestation_1.go",
        "model_inline_response_200_12_data.go",
        "model_inline_response_200_13.go",
        "model_inline_response_200_13_data.go",
        "model_inline_response_200_14.go",
        "model_inline_response_200_14_data.go",
        "model_inline_response_200_14_message.go",
        "model_inline_response_200_15.go",
        "model_inline_response_200_15_data.go",
        "model_inline_response_200_15_data_metadata.go",
        "model_inline_response_200_16.go",
        "model_inline_response_200_16_data.go",
        "model_inline_response_200_17.go",
        "model_inline_response_200_18.go",
        "model_inline_response_200_18_data.go",
        "model_inline_response_200_19.go",
        "model_inline_response_200_19_data.go",
        "model_inline_response_200_1_data.go",
        "model_inline_response_200_2.go",
        "model_inline_response_200_20.go",
        "model_inline_response_200_21.go",
        "model_inline_response_200_22.go",
        "model_inline_response_200_22_data.go",
        "model_inline_response_200_2_data.go",
        "model_inline_response_200_3.go",
        "model_inline_response_200_3_data.go",
        "model_inline_response_200_3_data_previous_justified.go",
        "model_inline_response_200_4.go",
        "model_inline_response_200_4_data.go",
        "model_inline_response_200_4_validator.go",
        "model_inline_response_200_5.go",
        "model_inline_response_200_6.go",
        "model_inline_response_200_6_data.go",
        "model_inline_response_200_7.go",
        "model_inline_response_200_7_data.go",
        "model_inline_response_200_7_header.go",
        "model_inline_response_200_8.go",
        "model_inline_response_200_8_data.go",
        "model_inline_response_200_9.go",
        "model_inline_response_200_9_data.go",
        "model_inline_response_200_data.go",
        "model_network_identity.go",
        "model_peer.go",
        "model_proposer_slashing.go",
        "model_signed_aggregate_and_proof.go",
        "model_signed_beacon_block.go",
        "model_signed_beacon_block_header.go",
        "model_signed_voluntary_exit.go",
        "model_validator_response.go",
        "model_validator_status.go",
        "response.go",
    ],
    importpath = "github.com/INFURA/eth2-comply/pkg/eth2spec",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_antihax_optional//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
