load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api_beacon.go",
        "api_node.go",
        "api_validator_required_api.go",
        "client.go",
        "configuration.go",
        "model_attestation.go",
        "model_attestation_data.go",
        "model_attester_duty.go",
        "model_attester_slashing.go",
        "model_beacon_block.go",
        "model_beacon_block_all_of.go",
        "model_beacon_block_all_of_1.go",
        "model_beacon_block_all_of_1_body.go",
        "model_beacon_block_all_of_1_body_attestation_1.go",
        "model_beacon_block_all_of_1_body_attester_slashings.go",
        "model_beacon_block_all_of_1_body_data.go",
        "model_beacon_block_all_of_1_body_deposits.go",
        "model_beacon_block_all_of_1_body_proposer_slashings.go",
        "model_beacon_block_all_of_1_body_voluntary_exits.go",
        "model_beacon_state.go",
        "model_beacon_state_eth1_data.go",
        "model_checkpoint.go",
        "model_committee.go",
        "model_error_message.go",
        "model_fork.go",
        "model_genesis_time.go",
        "model_get_block_attestations_response.go",
        "model_get_block_attestations_response_data.go",
        "model_get_block_attestations_response_data_1.go",
        "model_get_block_header_response.go",
        "model_get_block_headers_response.go",
        "model_get_block_headers_response_data.go",
        "model_get_block_headers_response_header.go",
        "model_get_block_response.go",
        "model_get_block_response_data.go",
        "model_get_block_root_response.go",
        "model_get_block_root_response_data.go",
        "model_get_epoch_committees_response.go",
        "model_get_epoch_committees_response_data.go",
        "model_get_genesis_response.go",
        "model_get_genesis_response_data.go",
        "model_get_network_identity_response.go",
        "model_get_network_identity_response_data.go",
        "model_get_network_identity_response_data_metadata.go",
        "model_get_peer_response.go",
        "model_get_peers_response.go",
        "model_get_peers_response_data.go",
        "model_get_state_finality_checkpoints_response.go",
        "model_get_state_finality_checkpoints_response_data.go",
        "model_get_state_finality_checkpoints_response_data_previous_justified.go",
        "model_get_state_fork_response.go",
        "model_get_state_fork_response_data.go",
        "model_get_state_root_response.go",
        "model_get_state_root_response_data.go",
        "model_get_state_validator_response.go",
        "model_get_state_validators_response.go",
        "model_get_state_validators_response_data.go",
        "model_get_state_validators_response_validator.go",
        "model_get_syncing_status_response.go",
        "model_get_syncing_status_response_data.go",
        "model_get_version_response.go",
        "model_get_version_response_data.go",
        "model_inline_object.go",
        "model_inline_response_400.go",
        "model_inline_response_500.go",
        "model_network_identity.go",
        "model_peer.go",
        "model_proposer_duty.go",
        "model_proposer_slashing.go",
        "model_signed_aggregate_and_proof.go",
        "model_signed_beacon_block.go",
        "model_signed_beacon_block_header.go",
        "model_signed_voluntary_exit.go",
        "model_validator_response.go",
        "model_validator_status.go",
        "response.go",
    ],
    importpath = "github.com/INFURA/eth2-comply/pkg/eth2spec",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_antihax_optional//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
