load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api_beacon.go",
        "api_config.go",
        "api_debug.go",
        "api_events.go",
        "api_node.go",
        "api_validator.go",
        "client.go",
        "configuration.go",
        "model_attestation.go",
        "model_attestation_data.go",
        "model_attester_duty.go",
        "model_attester_slashing.go",
        "model_beacon_block.go",
        "model_beacon_block_all_of.go",
        "model_beacon_block_all_of_1.go",
        "model_beacon_block_all_of_1_body.go",
        "model_beacon_block_all_of_1_body_data.go",
        "model_beacon_block_all_of_1_body_deposits.go",
        "model_beacon_state.go",
        "model_checkpoint.go",
        "model_committee.go",
        "model_error_message.go",
        "model_fork.go",
        "model_genesis_time.go",
        "model_get_aggregated_attestation_response.go",
        "model_get_attester_duties_response.go",
        "model_get_attester_duties_response_data.go",
        "model_get_block_attestations_response.go",
        "model_get_block_attestations_response_data.go",
        "model_get_block_attestations_response_data_1.go",
        "model_get_block_header_response.go",
        "model_get_block_headers_response.go",
        "model_get_block_headers_response_data.go",
        "model_get_block_headers_response_header.go",
        "model_get_block_response.go",
        "model_get_block_response_data.go",
        "model_get_block_root_response.go",
        "model_get_block_root_response_data.go",
        "model_get_debug_chain_heads_response.go",
        "model_get_debug_chain_heads_response_data.go",
        "model_get_deposit_contract_response.go",
        "model_get_deposit_contract_response_data.go",
        "model_get_epoch_committees_response.go",
        "model_get_epoch_committees_response_data.go",
        "model_get_fork_schedule_response.go",
        "model_get_genesis_response.go",
        "model_get_genesis_response_data.go",
        "model_get_network_identity_response.go",
        "model_get_network_identity_response_data.go",
        "model_get_network_identity_response_data_metadata.go",
        "model_get_peer_response.go",
        "model_get_peers_response.go",
        "model_get_peers_response_data.go",
        "model_get_pool_attester_slashings_response.go",
        "model_get_pool_attester_slashings_response_attestation_1.go",
        "model_get_pool_attester_slashings_response_data.go",
        "model_get_pool_proposer_slashings_response.go",
        "model_get_pool_proposer_slashings_response_data.go",
        "model_get_pool_voluntary_exits_response.go",
        "model_get_pool_voluntary_exits_response_data.go",
        "model_get_pool_voluntary_exits_response_message.go",
        "model_get_proposer_duties_response.go",
        "model_get_proposer_duties_response_data.go",
        "model_get_spec_response.go",
        "model_get_state_finality_checkpoints_response.go",
        "model_get_state_finality_checkpoints_response_data.go",
        "model_get_state_finality_checkpoints_response_data_previous_justified.go",
        "model_get_state_fork_response.go",
        "model_get_state_fork_response_data.go",
        "model_get_state_response.go",
        "model_get_state_response_data.go",
        "model_get_state_response_data_eth1_data.go",
        "model_get_state_root_response.go",
        "model_get_state_root_response_data.go",
        "model_get_state_validator_response.go",
        "model_get_state_validators_response.go",
        "model_get_state_validators_response_data.go",
        "model_get_state_validators_response_validator.go",
        "model_get_syncing_status_response.go",
        "model_get_syncing_status_response_data.go",
        "model_get_version_response.go",
        "model_get_version_response_data.go",
        "model_inline_object.go",
        "model_inline_object_1.go",
        "model_inline_object_2.go",
        "model_inline_object_3.go",
        "model_inline_object_4.go",
        "model_inline_object_5.go",
        "model_inline_response_400.go",
        "model_inline_response_500.go",
        "model_network_identity.go",
        "model_peer.go",
        "model_produce_attestation_data_response.go",
        "model_produce_block_response.go",
        "model_proposer_duty.go",
        "model_proposer_slashing.go",
        "model_signed_aggregate_and_proof.go",
        "model_signed_beacon_block.go",
        "model_signed_beacon_block_header.go",
        "model_signed_voluntary_exit.go",
        "model_validator_response.go",
        "model_validator_status.go",
        "response.go",
    ],
    importpath = "github.com/INFURA/eth2-comply/pkg/eth2spec",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_antihax_optional//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
