load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["oapi.go"],
    importpath = "github.com/INFURA/eth2-comply/pkg/oapi",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/eth2spec:go_default_library",
        "@com_github_antihax_optional//:go_default_library",
    ],
)
